# lib/db/src/schema/index.ts
@@ -17,4 +17,7 @@
 //   export type InsertPost = z.infer<typeof insertPostSchema>;
 //   export type Post = typeof postsTable.$inferSelect;
 
-export {}
+export * from "./conversations";
+export * from "./messages";
+export * from "./cabins";
+export * from "./leads";
